--- a/css/general.css
+++ b/css/general.css
@@ -42,3 +42,14 @@ a:hover {
 .card {
 	margin: 0.5em;
 }
+footer {
+	background-image: url('../images/belfastSkyline.PNG');
+    width: 100%;
+    height: 400px;
+     background-size: 100% 100%;
+}
+footer p {
+	color: white;
+	font-size: 20px;
+	text-align: center;
+}
