--- a/css/general.css
+++ b/css/general.css
@@ -48,11 +48,15 @@ a:hover {
 	margin: 5em;
 }
 
+#card-about {
+	margin: 5em;
+}
+
 .card {
 	margin: 0.5em;
 }
 footer {
-	background-image: url('../images/belfastSkyline.PNG');
+	background-image: url('../images/footer-drawing.png');
     width: 100%;
     height: 400px;
      background-size: 100% 100%;
