Improved footer image

--- a/css/general.css
+++ b/css/general.css
@@ -56,7 +56,7 @@ a:hover {
 	margin: 0.5em;
 }
 footer {
-	background-image: url('../images/footer-drawing.png');
+	background-image: url('../images/footer-skyline.png');
     width: 100%;
     height: 400px;
     background-size: 100% 100%;
